--- a/bibliotecaMusicalNegocio/pom.xml
+++ b/bibliotecaMusicalNegocio/pom.xml
@@ -5,10 +5,19 @@
     <artifactId>bibliotecaMusicalNegocio</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <properties>
+       <dependencies>
+              <dependency>
+                     <groupId>${project.groupId}</groupId>
+                     <artifactId>bibliotecaMusicalPersistencia</artifactId>
+                     <version>${project.version}</version>
+              </dependency>
+       </dependencies>
+       <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.bibliotecamusicalnegocio.BibliotecaMusicalNegocio</exec.mainClass>
     </properties>
+    
+        
 </project>
