--- a/bibliotecaMusicalNegocio/pom.xml
+++ b/bibliotecaMusicalNegocio/pom.xml
@@ -7,6 +7,11 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>bibliotecaMusicalPersistencia</artifactId>
             <version>${project.version}</version>
